<resources>
    <string name="app_name">BJain Doc</string>
    <string name="Profile">Profile</string>
    <string name="Account">My Account</string>
    <string name="action_settings">Settings</string>
    <string name="subtitle"></string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menu_title">Menu Title</string>
    <string name="page">Page</string>
    <string name="searchdoc">Search Doctor</string>
    <string name="tab">Tab</string>
    <string name="print">Print</string>
    <string name="search">Search</string>
    <string name="noti">Notification</string>
    <string name="urgent">urgent</string>
    <string name="menu1">Patient</string>
    <string name="patient_lisy">Patient List</string>
    <string name="menu2">Appointment</string>
    <string name="menu3">Broadcast messages</string>
    <string name="menu4">Notification</string>
    <string name="menu5">Activation</string>
    <string name="menu6">Logout</string>
    <string name="menu7">Find Doctor</string>
    <string name="prompt_email">Email</string>
    <string name="sign_in">Sign IN</string>
    <string name="update_doc">Update Information</string>
    <string name="add_patient">Add Patient</string>
    <string name="sign_up">Sign Up</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">SUBMIT</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forgot_passord_underline"><u>Forgot Password</u></string>
    <string name="facebook_app_id">134866916852603</string>
    <string name="hello_world">Hello world!</string>
    <string name="toolbar_title_home">Home</string>
    <string name="toolbar_title_explore">Explore</string>
    <string name="other_activity">Other Activity</string>
    <string name="err_dob">Enter your date of birth</string>
    <string name="err_name">Enter your full name</string>
    <string name="err_phone">Enter your phone number</string>
    <string name="err_network_issue">Your network connection is too slow ,Please try again!!!</string>
    <string name="All_timings"><u>All timings</u></string>
    <string name="All_timing"><u>Register</u></string>
    <string name="nav_drawer_item_home">Home</string>
    <string name="nav_drawer_item_explore">Explore</string>
    <string name="nav_drawer_help_and_feedback"><![CDATA[Help & feedback]]></string>
    <string name="nav_drawer_about">About</string>
    <string name="navigation_drawer_opened">The navigation drawer is opened</string>
    <string name="navigation_drawer_closed">The navigation drawer is closed</string>
    <string name="tag_nav_drawer_main_entry">nav_drawer_main_entry</string>
    <string name="tag_nav_drawer_special_entry">nav_drawer_special_entry</string>
    <string name="tools_text_account_information_username">Username</string>
    <string name="tools_text_account_information_email">user@mail.com</string>
    <string name="typeface_roboto_regular">Roboto-Regular</string>
    <string name="typeface_roboto_medium">Roboto-Medium</string>
    <string name="txttermcondition1">By signing up,you agree to our <u><font color='white'> Terms of Use  </font></u> &amp;
    <u><font color='white'> Privacy Policy </font></u> </string>
    <string name="txttermcondition">By signing up,you agree to <u><font color='white'> Terms &amp; Conditions</font></u></string>
    <string name="register_here"><u>New user register here</u></string>
    <string name="h_fname">Enter first name</string>
    <string name="h_lname">Enter last name</string>
    <string name="h_email">Enter email</string>
    <string name="h_mobile">Mobile</string>
    <string name="h_password">Password</string>
    <string name="h_confpassword">Confirm Password</string>
    <string name="b_group">Group</string>
    <string name="personal_details">Personal information</string>
    <string name="activation">Enter Blood Group</string>
    <string name="height">height</string>
    <string name="weight">weight</string>
    <string name="description">Patient Description</string>
    <string name="practice_hour">Practice hour</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="appotime">Appointment Time</string>
    <string name="profile_details">Profile Details</string>
    <string name="user_name">User name</string>
    <string name="submit">Submit</string>
    <string name="h_newpassword">New password</string>
    <string name="title_activity_sign_with_patient">Sign in</string>
    <string name="err_network">No network connection available!</string>
    <string name="error">Error</string>
    <string name="err_fname">Enter your first name</string>
    <string name="err_lname">Enter your last name</string>
    <string name="how_it_works">It \'s basically to reduce the use of paper and go to paperless as our environment Go Green Mission</string>
    <string name="err_pass">Enter the password first</string>
    <string name="err_email">Enter a valid email id and password</string>
    <string name="err_notify">Your id has been deactivated</string>
    <string name="font_fontFamily_medium">sans-serif</string>
    <string-array name="Time_Pickersheet">
        <item>06:00</item>
        <item>06:30</item>
        <item>07:00</item>
        <item>07:30</item>
        <item>08:00</item>
        <item>08:30</item>
        <item>09:00</item>
        <item>09:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>


    </string-array>
    <string-array name="Time_Pickersheetaftr">
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00 </item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00 </item>
    </string-array>
    <string-array name="Time_Pickersheeteven">
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
        <item>19:30</item>
        <item>20:00</item>
        <item>20:30</item>
        <item>21:00</item>
        <item>21:30</item>
    </string-array>
    <string-array name="severity_of_pain1">
        <item>6AM</item>
        <item>7AM</item>
        <item>8AM</item>
        <item>9AM</item>
        <item>10AM</item>
        <item>11AM</item>
    </string-array>
    <string-array name="severity_of_pain2">
        <item>7AM</item>
        <item>8AM</item>
        <item>9AM</item>
        <item>10AM</item>
        <item>11AM</item>
        <item>12PM</item>
    </string-array>
    <string-array name="content">

        <item> private</item>
        <item>public</item>
    </string-array>
    <string-array name="severity_of_pain3">
        <item>12PM</item>
        <item>1PM</item>
        <item>2PM</item>
        <item>3PM</item>
        <item>4PM</item>
    </string-array>
    <string-array name="severity_of_pain4">
        <item>1PM</item>
        <item>2PM</item>
        <item>3PM</item>
        <item>4PM</item>
    </string-array>
    <string-array name="severity_of_pain5">
        <item>5PM</item>
        <item>6PM</item>
        <item>7PM</item>
        <item>8PM</item>
        <item>9PM</item>
    </string-array>
    <string-array name="severity_of_pain6">
        <item>6PM</item>
        <item>7PM</item>
        <item>8PM</item>
        <item>9PM</item>
    </string-array>
    <string-array name="ampmarray">
        <item>am</item>
        <item>pm</item>
    </string-array>
    <string-array name="pmamarray">
        <item>pm</item>
        <item>am</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>