<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_above="@+id/footer"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical"
    >
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/ic_circular"
        android:contentDescription="@string/app_name"
        android:padding="5dp"
        android:src="@drawable/ic_action_person" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:contentDescription="@string/app_name"
        android:text="@string/personal_details"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="@dimen/padding_5"
        android:layout_marginTop="@dimen/padding_5"
        android:background="@color/color_line"
        android:contentDescription="@string/app_name" />



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/update_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:contentDescription="@string/name"
            android:hint="@string/name" />
        </android.support.design.widget.TextInputLayout>



        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="@dimen/padding_5"
        android:layout_marginTop="@dimen/padding_5"
        android:background="@color/color_line"
        android:contentDescription="@string/app_name" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/update_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:contentDescription="@string/email"
            android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>



        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="@dimen/padding_5"
        android:layout_marginTop="@dimen/padding_5"
        android:background="@color/color_line"
        android:contentDescription="@string/app_name" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/update_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:contentDescription="dob"
            android:hint="@string/h_newpassword" />
</android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/txt_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/phone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="@dimen/padding_5"
        android:layout_marginTop="@dimen/padding_5"
        android:background="@color/color_line"
        android:contentDescription="@string/app_name" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/update_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:contentDescription="@string/phone"
            android:hint="Enter Confirm Password" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/txt_phone1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/phone" />





    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="@dimen/padding_5"
        android:layout_marginTop="@dimen/padding_5"
        android:background="@color/color_line"
        android:contentDescription="@string/app_name" />


</LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:background="@drawable/btn_bg"
        android:contentDescription="@string/app_name"
        android:text="@string/submit" />
    </LinearLayout>
</RelativeLayout>
