<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="10dp">

<ImageView
    android:layout_width="match_parent"
    android:visibility="gone"
    android:layout_height="50dp"
    android:background="@drawable/unnamed"/>


    <TextView
        android:id="@+id/text_info"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:gravity="center_horizontal"
        android:padding="@dimen/padding_10"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:text="@string/update_doc"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/top_"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:gravity="bottom"
        android:layout_marginTop="2dp">
        <TextView
            android:id="@+id/basic_infor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#3F3F3F"
            android:text="Basic Information"
            android:textStyle="bold"
            android:layout_marginTop="1dp"/>
    </LinearLayout>



    <ScrollView
        android:layout_above="@+id/linearbottom"
        android:layout_below="@+id/top_"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F6F6F6"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/img_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_action_person"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/green_700"/>

            <TextView
                android:id="@+id/txt_pname"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/img_profile"
                android:contentDescription="@string/app_name"
                android:hint="Name"
                android:inputType="textCapWords"
                android:textColor="#626262"
                android:textColorHint="#ABABAB" />
            </RelativeLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/edtxt_pname"
                    android:layout_width="match_parent"
                    android:cursorVisible="false"
                    android:textSize="12dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:hint="Name"
                    android:inputType="textCapWords"
                    android:textColor="#626262"
                    android:textColorHint="#ABABAB" />
            </android.support.design.widget.TextInputLayout>

            <EditText
                android:id="@+id/edtxt_pemail"
                android:layout_width="match_parent"
                android:textSize="12dp"
                android:hint="Email"
                android:layout_height="40dp"
                android:focusable="false"
                android:contentDescription="@string/app_name"
                android:textColor="#626262"
                android:textColorHint="#ABABAB" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtxt_ppassword"
                    android:layout_width="match_parent"
                    android:textSize="12dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:hint="New password"
                    android:inputType="textCapWords"
                    android:textColor="#626262"
                    android:maxLength="10"
                    android:textColorHint="#ABABAB"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtxt_pmob"
                    android:layout_width="match_parent"
                    android:textSize="12dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:inputType="number"
                    android:hint="@string/h_mobile"
                    android:textColor="#626262"
                    android:textColorHint="#ABABAB" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtxt_page"
                    android:layout_width="match_parent"
                    android:textSize="12dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:inputType="textCapWords"
                    android:hint="Age"
                    android:textColor="#626262"
                    android:textColorHint="#ABABAB" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/edtxt_pbgroup"
                    android:layout_width="match_parent"
                    android:textSize="12dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/b_group"
                    android:inputType="textCapWords"
                    android:textColor="#626262"
                    android:textColorHint="#ABABAB" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/edtxt_pwt"
                    android:layout_width="match_parent"
                    android:textSize="12dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:inputType="textCapWords"
                    android:hint="@string/weight"
                    android:textColor="#626262"
                    android:textColorHint="#ABABAB" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/edtxt_pheight"
                    android:layout_width="match_parent"
                    android:textSize="12dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:inputType="textCapWords"
                    android:hint="@string/height"
                    android:textColor="#626262"
                    android:textColorHint="#ABABAB" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/edtxt_descrption"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:inputType="textCapWords"
                    android:hint="@string/description"
                    android:textColor="#626262"
                    android:textColorHint="#ABABAB" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:weightSum="2">
                <TextView
                    android:text="Condition"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:contentDescription="@string/app_name"
                    android:textColor="#626262"
                    android:textColorHint="#ABABAB"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <RadioGroup
                    android:id="@+id/p_rg_Condition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >
                    <RadioButton
                        android:id="@+id/Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="#626262"
                        android:text="Normal"
                        />
                    <RadioButton
                        android:id="@+id/Critical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#626262"
                        android:text="Critical"
                        />
                </RadioGroup>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
